--- a/Views/Conferences/DetailsCode.cshtml
+++ b/Views/Conferences/DetailsCode.cshtml
@@ -61,7 +61,7 @@
                 <div class="form-group">
                     <label class="control">meeting code: </label>
                     <input id="myCode"
-                           class="form-control" />
+                           class="form-control" type="password" />
                 </div>
 
                 <div class="form-group">
