--- a/Views/Conferences/Index.cshtml
+++ b/Views/Conferences/Index.cshtml
@@ -10,7 +10,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @if (SignInManager.IsSignedIn(User) && User.IsInRole(SystemRoles.Admin))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <table class="table">
     <thead>
