--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -27,6 +27,10 @@
 
     <ul class="navbar-nav flex-grow-1">
 
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">About</a>
+        </li>
+
 
         @if (SignInManager.IsSignedIn(User) && User.IsInRole(SystemRoles.Admin))
         {
@@ -40,10 +44,7 @@
         else if (SignInManager.IsSignedIn(User) && User.IsInRole(SystemRoles.User))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                <a class="nav-link text-dark" asp-controller="Conferences" asp-action="Index">my Conferences</a>
             </li>
         }
     </ul>
